PhonosButton.less: prevent attribution link from wrapping to new line
Bug: T345315

--- a/modules/PhonosButton.less
+++ b/modules/PhonosButton.less
@@ -9,7 +9,10 @@
 // We have to override a bunch of OOUI button styles, but it's worth it because
 // we also *don't* have to add a bunch of button behaviour and styles ourselves.
 .ext-phonos-PhonosButton {
+	/* stylelint-disable-next-line declaration-no-important */
+	display: inline !important;
 	margin: 0;
+	white-space: nowrap;
 
 	&.oo-ui-buttonElement-frameless.oo-ui-iconElement > .oo-ui-buttonElement-button > .oo-ui-iconElement-icon {
 		left: 0;
